2009-11-11  Jessie Berlin  <jberlin@webkit.org>

        Reviewed by Timothy Hatcher.

        Display the correct summary in the web inspector for the shorthands
        border-color, border-width, border-style, margin, and padding.
        https://bugs.webkit.org/show_bug.cgi?id=7987

        Test: fast/css/shorthands-four-values.html

        * css/CSSMutableStyleDeclaration.cpp:
        (WebCore::CSSMutableStyleDeclaration::get4Values):
        Display the summary information in the same way the shorthand would be
        specified in a css rule.

2009-11-11  Jens Alfke  <snej@chromium.org>

        Reviewed by Dimitri Glazkov.

        Make V8 bindings return NULL handles instead of calling v8::Undefined(). This has equivalent
        meaning to the caller, saves code, and appears to save a few cycles at runtime too.
        https://bugs.webkit.org/show_bug.cgi?id=31367

        * bindings/scripts/CodeGeneratorV8.pm: Change "v8::Undefined()" to "v8::Handle<v8::Value>()"

2009-11-11  Jens Alfke  <snej@chromium.org>

        Reviewed by Dimitri Glazkov.

        Optimize V8 getDOMNodeMap(), a hot function in Dromaeo DOM tests, by increasing inlining.

        * bindings/v8/DOMData.cpp:
        (WebCore::DOMData::getCurrent):  Moved getCurrentMainThread to MainThreadDOMData::getCurrent
            so it can be inlined by its caller.
        * bindings/v8/DOMData.h:
        * bindings/v8/MainThreadDOMData.cpp:
        (WebCore::MainThreadDOMData::getCurrent):  Moved here from DOMData.cpp.
        (WebCore::MainThreadDOMData::getMainThreadStore):  Added UNLIKELY macro to improve codegen.
        (WebCore::MainThreadDOMData::getCurrentMainThreadStore):  Combination of getCurrentMainThread
            and getStore, which inline both calls together.
        * bindings/v8/MainThreadDOMData.h:
        (WebCore::MainThreadDOMData::getStore):  Broke out nonvirtual getMainThreadStore for inlineability.
        * bindings/v8/V8DOMMap.cpp: